Update optimizer to reduce memory footprint

--- a/include/cint.h.in
+++ b/include/cint.h.in
@@ -115,15 +115,17 @@
 #if !defined HAVE_DEFINED_CINTOPT_H
 #define HAVE_DEFINED_CINTOPT_H
 typedef struct {
-    FINT **index_xyz_array; // ANG_MAX**4 pointers to index_xyz
-    FINT *prim_offset;
-    FINT *non0ctr;
-    FINT **non0idx;
-    double **non0coeff;
-    double **expij;
-    double **rij;
-    FINT **cceij;
-    FINT tot_prim;
+    double rij[3];
+    double eij;
+    double cceij;
+} PairData;
+typedef struct {
+    FINT **index_xyz_array; // LMAX1**4 pointers to index_xyz
+    FINT **non0ctr;
+    FINT **sortedidx;
+    FINT nbas;
+    double **log_max_coeff;
+    PairData **pairdata;  // NULL indicates not-initialized, NO_VALUE can be skipped
 } CINTOpt;
 #endif
 
