--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,7 +64,8 @@ set(cintSrc
   src/autocode/breit1.c src/autocode/dkb.c src/autocode/gaunt1.c
   src/autocode/grad1.c src/autocode/grad2.c src/autocode/hess.c
   src/autocode/int3c1e.c src/autocode/int3c2e.c src/autocode/intor1.c
-  src/autocode/intor2.c src/autocode/intor3.c src/autocode/intor4.c)
+  src/autocode/intor2.c src/autocode/intor3.c src/autocode/intor4.c
+  src/autocode/deriv3.c)
 
 #option(WITH_RANGE_COULOMB "Range separated Coulomb" on)
 if(WITH_RANGE_COULOMB)
