--- a/.travis.yml
+++ b/.travis.yml
@@ -23,18 +23,18 @@ addons:
     packages:
     - cmake
     - python-numpy
-    - gcc-5
-    - g++-5
-    - gfortran-5
+    - gcc
+    - g++
+    - gfortran
     # This should provide OpenMP
-    - clang-3.8
+    - clang
     - libblas-dev
 script:
 - env
 - mkdir build
 - cd build
-- if [ "${TRAVIS_OS_NAME}" = "osx" ] && [ "${CC}" = "gcc" ]; then brew install gcc6 && export CC=gcc-6 CXX=g++-6 ; fi
-- if [ "${TRAVIS_OS_NAME}" = "osx" ] && [ "${CC}" = "clang" ]; then brew install llvm38 && export CC=clang-3.8 CXX=clang-3.8 ; fi
+- if [ "${TRAVIS_OS_NAME}" = "osx" ] && [ "${CC}" = "gcc" ]; then brew install gcc && export CC=gcc CXX=g++ ; fi
+- if [ "${TRAVIS_OS_NAME}" = "osx" ] && [ "${CC}" = "clang" ]; then brew install llvm && export CC=clang CXX=clang ; fi
 - export CMAKE_C_COMPILER=$CC
 - export CMAKE_CXX_COMPILER=$CXX
 - export CMAKE_C_FLAGS="-O3 -fopenmp"
