Debug github actions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Compile
-      - run: |
+        run: |
           env
           mkdir build
           cd build
