--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required (VERSION 2.6)
 project (cint C)
 set(cint_VERSION_MAJOR "4")
 set(cint_VERSION_MINOR "1")
-set(cint_VERSION_PATCH "0")
+set(cint_VERSION_PATCH "1")
 set(cint_VERSION_TWEAK "0")
 set(cint_VERSION "${cint_VERSION_MAJOR}.${cint_VERSION_MINOR}.${cint_VERSION_PATCH}")
 set(cint_SOVERSION "${cint_VERSION_MAJOR}")
@@ -107,7 +107,7 @@ if(MIN_EXPCUTOFF)
 endif()
 
 if(KEEP_GOING)
-  message("Whether to trigger hard exit for numerical issues in Rys quadrature")
+  message("Do not trigger hard exit for numerical issues in Rys quadrature")
   add_definitions(-DKEEP_GOING)
 endif()
 
