--- a/include/cint.h.in
+++ b/include/cint.h.in
@@ -166,19 +166,19 @@ void CINTdel_2e_optimizer(CINTOpt **opt);
 void CINTdel_optimizer(CINTOpt **opt);
 
 
-FINT cint2e_cart(double *opijkl, const FINT *shls,
+size_t cint2e_cart(double *opijkl, const FINT *shls,
                 const FINT *atm, const FINT natm,
                 const FINT *bas, const FINT nbas, const double *env,
                 const CINTOpt *opt);
 void cint2e_cart_optimizer(CINTOpt **opt, const FINT *atm, const FINT natm,
                            const FINT *bas, const FINT nbas, const double *env);
-FINT cint2e_sph(double *opijkl, const FINT *shls,
+size_t cint2e_sph(double *opijkl, const FINT *shls,
                const FINT *atm, const FINT natm,
                const FINT *bas, const FINT nbas, const double *env,
                const CINTOpt *opt);
 void cint2e_sph_optimizer(CINTOpt **opt, const FINT *atm, const FINT natm,
                           const FINT *bas, const FINT nbas, const double *env);
-FINT cint2e(double *opijkl, const FINT *shls,
+size_t cint2e(double *opijkl, const FINT *shls,
            const FINT *atm, const FINT natm,
            const FINT *bas, const FINT nbas, const double *env,
            const CINTOpt *opt);
