Add integral function int1e_grids

--- a/include/cint.h.in
+++ b/include/cint.h.in
@@ -26,6 +26,8 @@
 #define PTR_F12_ZETA    9
 // Gaussian type geminal e^{-zeta r^2}
 #define PTR_GTG_ZETA    10
+#define NGRIDS          11
+#define PTR_GRIDS       12
 #define PTR_ENV_START   20
 
 // slots of atm
