Bugfix and optimization for g1e_grids

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,21 +7,35 @@ set(cint_VERSION_TWEAK "0")
 set(cint_VERSION "${cint_VERSION_MAJOR}.${cint_VERSION_MINOR}.${cint_VERSION_PATCH}")
 set(cint_SOVERSION "${cint_VERSION_MAJOR}")
 
-#set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -O2 -DNDEBUG")
 if ("${CMAKE_BUILD_TYPE}" STREQUAL "")
   set(CMAKE_BUILD_TYPE RELWITHDEBINFO)
+  message("Build type RELWITHDEBINFO")
+else()
+  message("Build type ${CMAKE_BUILD_TYPE}")
 endif()
 set(CMAKE_VERBOSE_MAKEFILE OFF)
 
-if (${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION}.${CMAKE_PATCH_VERSION} VERSION_GREATER 2.8.3)
-  if (${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION}.${CMAKE_PATCH_VERSION} VERSION_GREATER 3.0.0)
-    cmake_policy(SET CMP0042 NEW) 
+option(BUILD_MARCH_NATIVE "gcc flag -march=native" off)
+if (BUILD_MARCH_NATIVE)
+  include(CheckCCompilerFlag)
+  CHECK_C_COMPILER_FLAG("-march=native" COMPILER_SUPPORTS_MARCH_NATIVE)
+  if(COMPILER_SUPPORTS_MARCH_NATIVE)
+    if ("${CMAKE_C_COMPILER_ID}" STREQUAL "Intel")
+      message("Add CFLAGS -march=native -unroll-aggressive")
+      set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -unroll-aggressive -ipo")
+      set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fno-math-errno")
+    else()
+      message("Add CFLAGS -march=native -ftree-vectorize")
+      set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -march=native -funroll-loops -ftree-vectorize")
+      set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fno-math-errno")
+    endif()
   endif()
-  include(GNUInstallDirs)
-else ()
-  set(CMAKE_INSTALL_LIBDIR lib CACHE PATH "lib")
-  set(CMAKE_INSTALL_INCLUDEDIR include CACHE PATH "include")
-endif ()
+endif()
+
+#set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -O2 -DNDEBUG")
+
+cmake_policy(SET CMP0042 NEW) 
+include(GNUInstallDirs)
 #set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
 list(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake")
