--- a/include/cint.h.in
+++ b/include/cint.h.in
@@ -14,6 +14,14 @@
 #define FINT int
 #endif
 
+#cmakedefine CACHE_SIZE_I8
+#ifdef CACHE_SIZE_I8
+#include <stdint.h>
+#define CACHE_SIZE_T int64_t
+#else
+#define CACHE_SIZE_T FINT
+#endif
+
 #define PTR_EXPCUTOFF   0
 #define PTR_COMMON_ORIG 1
 #define PTR_RINV_ORIG   4
@@ -168,19 +176,19 @@ void CINTdel_2e_optimizer(CINTOpt **opt);
 void CINTdel_optimizer(CINTOpt **opt);
 
 
-FINT cint2e_cart(double *opijkl, const FINT *shls,
+CACHE_SIZE_T cint2e_cart(double *opijkl, const FINT *shls,
                 const FINT *atm, const FINT natm,
                 const FINT *bas, const FINT nbas, const double *env,
                 const CINTOpt *opt);
 void cint2e_cart_optimizer(CINTOpt **opt, const FINT *atm, const FINT natm,
                            const FINT *bas, const FINT nbas, const double *env);
-FINT cint2e_sph(double *opijkl, const FINT *shls,
+CACHE_SIZE_T cint2e_sph(double *opijkl, const FINT *shls,
                const FINT *atm, const FINT natm,
                const FINT *bas, const FINT nbas, const double *env,
                const CINTOpt *opt);
 void cint2e_sph_optimizer(CINTOpt **opt, const FINT *atm, const FINT natm,
                           const FINT *bas, const FINT nbas, const double *env);
-FINT cint2e(double *opijkl, const FINT *shls,
+CACHE_SIZE_T cint2e(double *opijkl, const FINT *shls,
            const FINT *atm, const FINT natm,
            const FINT *bas, const FINT nbas, const double *env,
            const CINTOpt *opt);
