--- a/src/config.h.in
+++ b/src/config.h.in
@@ -1,18 +1,4 @@
-#cmakedefine I8
-#ifdef I8
-#include <stdint.h>
-#define FINT int64_t
-#else
-#define FINT int
-#endif
-
-#cmakedefine RETURNI8
-#ifdef RETURNI8
-#include <stdint.h>
-#define CACHE_SIZE_T int64_t
-#else
-#define CACHE_SIZE_T FINT
-#endif
+#include "cint.h"
 
 #cmakedefine HAVE_EXPL
 #cmakedefine HAVE_SQRTL
@@ -22,3 +8,28 @@
 
 #cmakedefine WITH_RANGE_COULOMB
 
+#ifndef M_PI
+#define M_PI            3.1415926535897932384626433832795028
+#endif
+#define SQRTPI          1.7724538509055160272981674833411451
+
+// ng[*]
+#define IINC            0
+#define JINC            1
+#define KINC            2
+#define LINC            3
+#define GSHIFT          4
+#define POS_E1          5
+#define POS_E2          6
+#define SLOT_RYS_ROOTS  6
+#define TENSOR          7
+
+#define EXPCUTOFF       60
+#ifndef MIN_EXPCUTOFF
+// ~ 1e-15
+#define MIN_EXPCUTOFF   40
+#endif
+
+#define OF_CMPLX        2
+
+#define GRID_BLKSIZE    104
