--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,7 +27,7 @@ if (BUILD_MARCH_NATIVE)
     else()
       message("Add CFLAGS -march=native -ftree-vectorize")
       set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -march=native -funroll-loops -ftree-vectorize")
-      set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fno-math-errno")
+      set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fno-math-errno --param vect-max-version-for-alias-checks=15")
     endif()
   endif()
 endif()
