Fix bug in cint3c1e

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,3 +32,6 @@ jobs:
           cd ${{ github.workspace }}/testsuite
           python test_cint.py --quick
           python test_3c2e.py --quick
+          python test_cart2sph.py
+          python test_c2s.py
+          python test_cint4c1e.py
