README.rst should be packed

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -211,7 +211,7 @@ set(CPACK_PACKAGE_VENDOR "Qiming @sunqm Sun")
 set(CPACK_PACKAGE_CONTACT "https://github.com/sunqm/libcint")
 set(CPACK_PACKAGE_HOMEPAGE_URL "https://github.com/sunqm/libcint")
 set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE")
-set(CPACK_RESOURCE_FILE_README "${CMAKE_CURRENT_SOURCE_DIR}/README")
+set(CPACK_RESOURCE_FILE_README "${CMAKE_CURRENT_SOURCE_DIR}/README.rst")
 set(CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_CURRENT_SOURCE_DIR}/doc/libcint.CPack.txt")
 
 set(CPACK_PACKAGE_VERSION_MAJOR "${cint_VERSION_MAJOR}")
