--- a/include/cint.h.in
+++ b/include/cint.h.in
@@ -49,9 +49,8 @@
 #define PTR_COORD       1
 #define NUC_MOD_OF      2
 #define PTR_ZETA        3
-#define PTR_FRAC_CHARGE 3
-#define RESERVE_ATMLOT1 4
-#define RESERVE_ATMLOT2 5
+#define PTR_FRAC_CHARGE 4
+#define RESERVE_ATMSLOT 5
 #define ATM_SLOTS       6
 
 
