Change SR integral algorithm for nroots <= 3
Refactor g2e.c

Remove GTG integrals and coulerf function

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required (VERSION 3.5)
 project (cint C)
-set(cint_VERSION_MAJOR "5")
-set(cint_VERSION_MINOR "5")
+set(cint_VERSION_MAJOR "6")
+set(cint_VERSION_MINOR "0")
 set(cint_VERSION_PATCH "0")
 set(cint_VERSION_TWEAK "0")
 set(cint_VERSION "${cint_VERSION_MAJOR}.${cint_VERSION_MINOR}.${cint_VERSION_PATCH}")
@@ -89,23 +89,17 @@ set(cintSrc
 if(WITH_RANGE_COULOMB)
 # defined in config.h
 #  add_definitions(-DWITH_RANGE_COULOMB)
-  message("Enabled WITH_RANGE_COULOMB")
-  if(WITH_POLYNOMIAL_FIT)
-    set(cintSrc ${cintSrc} src/polyfits.c src/sr_rys_polyfits.c)
-    add_definitions(-DWITH_POLYNOMIAL_FIT)
-    message("Enabled WITH_POLYNOMIAL_FIT")
-  endif(WITH_POLYNOMIAL_FIT)
+#  message("Enabled WITH_RANGE_COULOMB")
 endif(WITH_RANGE_COULOMB)
 
-if(WITH_EIG_ROOTFINDER)
-  add_definitions(-DWITH_EIG_ROOTFINDER)
-  message("Enabled linear equation solver with eigenvalue algorithm")
-endif(WITH_EIG_ROOTFINDER)
+if(WITH_POLYNOMIAL_FIT)
+  set(cintSrc ${cintSrc} src/polyfits.c src/sr_rys_polyfits.c)
+  add_definitions(-DWITH_POLYNOMIAL_FIT)
+  message("Enabled WITH_POLYNOMIAL_FIT")
+endif(WITH_POLYNOMIAL_FIT)
 
 if(WITH_COULOMB_ERF)
-  set(cintSrc ${cintSrc} src/g2e_coulerf.c src/cint2e_coulerf.c)
-  add_definitions(-DWITH_COULOMB_ERF)
-  message("Enabled WITH_COULOMB_ERF")
+  message("WITH_COULOMB_ERF is deprecated since v6.0")
 endif(WITH_COULOMB_ERF)
 
 if(WITH_F12)
@@ -115,12 +109,13 @@ if(WITH_F12)
 endif(WITH_F12)
 
 # Gaussian type geminal code are incorrect
-#if(WITH_GTG)
+if(WITH_GTG)
 #  set(cintSrc ${cintSrc} src/g2e_gtg.c src/cint2e_gtg.c src/cint3c2e_gtg.c
 #    src/cint2c2e_gtg.c)
 #  add_definitions(-DWITH_GTG)
 #  message("Enabled WITH_GTG. Note there are bugs in gtg type integrals")
-#endif(WITH_GTG)
+  message("WITH_GTG is deprecated since v6.0")
+endif(WITH_GTG)
 
 if(WITH_4C1E)
   set(cintSrc ${cintSrc} src/cint4c1e.c src/g4c1e.c)
