--- a/include/cint.h.in
+++ b/include/cint.h.in
@@ -4,7 +4,7 @@
  * Parameters and function signature for libcint.
  */
 
-#define CINT_VERSION            @cint_VERSION@
+#define CINT_VERSION            "@cint_VERSION@"
 #define CINT_SOVERSION          @cint_SOVERSION@
 
 #cmakedefine I8
