Update CMake prefix (Fix #112)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -192,8 +192,8 @@ target_link_libraries(cint "-lm")
 
 
 
-install(TARGETS cint DESTINATION "${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR}" COMPONENT "lib")
-install(FILES ${CintHeaders} DESTINATION ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_INCLUDEDIR} COMPONENT "dev")
+install(TARGETS cint COMPONENT "lib")
+install(FILES ${CintHeaders} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR} COMPONENT "dev")
 
 
 if(ENABLE_EXAMPLE)
