--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,7 +34,7 @@ endif()
 
 #set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -O2 -DNDEBUG")
 
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=gnu17")
+set(CMAKE_C_STANDARD 99)
 
 cmake_policy(SET CMP0042 NEW)
 include(GNUInstallDirs)
